--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS clamp Visualizer</title>
+    <title>CSS clamp() Function Visualizer</title>
+    <meta name="description"
+        content="Herramienta interactiva para ajustar dinámicamente el tamaño de la fuente usando la función clamp() de CSS. Edita, visualiza y copia el código CSS generado.">
+    <meta name="keywords"
+        content="CSS, clamp(), función clamp, tamaño de fuente, visualizador CSS, herramientas CSS, desarrollo web, diseño web, editar texto, vista previa">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://css-clamp-visualizer.netlify.app/">
+    <meta property="og:title" content="CSS clamp() Function Visualizer">
+    <meta property="og:description"
+        content="Herramienta interactiva para ajustar dinámicamente el tamaño de la fuente usando la función clamp() de CSS. Edita, visualiza y copia el código CSS generado.">
+    <meta property="og:image" content="/capture.jpg">
+
+
+    <!-- Favicon -->
+    <link rel="icon" href="/logo.svg" type="image/x-icon">
+
 
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/fonts.css">
