--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     d="M12 9.12952C10.6667 5.9999 6 6.33323 6 10.3333C6 14.3333 12 17.6667 12 17.6667C12 17.6667 18 14.3333 18 10.3333C18 6.33323 13.3333 5.9999 12 9.12952Z"
                     stroke="#101318" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg>
-            <p>Herramienta alojada en <a class="link" href="https://github.com/Creatlydev/css-clamp-visualizer"
-                    rel="noreferrer noopener" target="_blank">Github</a>, creada por <a href="https://github.com/Creatlydev"
+            <p>Herramienta alojada en <a class="link" href="https://github.com/yanguadotdev/css-clamp-visualizer"
+                    rel="noreferrer noopener" target="_blank">Github</a>, creada por <a href="https://github.com/yanguadotdev"
                     rel="noreferrer noopener" class="link" target="_blank">Samir</a></p>
         </div>
         <div class="line"></div>
